--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,37 +1,54 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
 trigger:
 - main
 
-pool:
-  vmImage: ubuntu-latest
+parameters:
+  - name: tagChoice
+    displayName: 'Choose Behave Tag'
+    type: string
+    default: '@smoke'
+    values:
+      - '@smoke'
+      - '@regression'
+      - '@smoke,@regression'
 
-strategy:
-  matrix:
-    Python38:
-      python.version: '3.8'
-    Python39:
-      python.version: '3.9'
-    Python310:
-      python.version: '3.10'
-    Python311:
-      python.version: '3.11'
+pool:
+  vmImage: 'ubuntu-latest'
+
+variables:
+  allureVersion: '2.21.0'
 
 steps:
+
 - task: UsePythonVersion@0
   inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
+    versionSpec: '3.9'
+  displayName: 'Use Python 3.9'
 
 - script: |
     python -m pip install --upgrade pip
     pip install -r requirements.txt
-  displayName: 'Install dependencies'
+    pip install behave allure-behave
+  displayName: 'Install Python dependencies'
 
 - script: |
-    pip install pytest pytest-azurepipelines
-    pytest
-  displayName: 'pytest'
+    echo "TAG CHOICE = ${{ parameters.tagChoice }}"
+    if [[ "${{ parameters.tagChoice }}" == "@smoke,@regression" ]]; then
+      behave -t @smoke -t @regression -f allure_behave.formatter:AllureFormatter -o allure-results
+    else
+      behave -t ${{ parameters.tagChoice }} -f allure_behave.formatter:AllureFormatter -o allure-results
+    fi
+  displayName: 'Run Behave tests with Allure'
+
+- script: |
+    curl -o allure.zip -L https://github.com/allure-framework/allure2/releases/download/${{ variables.allureVersion }}/allure-${{ variables.allureVersion }}.zip
+    unzip -o allure.zip -d $(Build.ArtifactStagingDirectory)/allure
+    chmod +x $(Build.ArtifactStagingDirectory)/allure/allure-${{ variables.allureVersion }}/bin/allure
+    $(Build.ArtifactStagingDirectory)/allure/allure-${{ variables.allureVersion }}/bin/allure generate allure-results --clean -o allure-report
+  displayName: 'Generate Allure Report'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+    pathToPublish: 'allure-report'
+    artifactName: 'allure-report'
+    publishLocation: 'Container'
+  displayName: 'Publish Allure Report as Artifact'
